--- a/FlexEngine/FlexEngine.vcxproj.filters
+++ b/FlexEngine/FlexEngine.vcxproj.filters
@@ -32,6 +32,9 @@
     <Filter Include="src\FlexEngine\Component">
       <UniqueIdentifier>{056a8a36-4ac8-4d06-acb5-bd1ac0bc8b49}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\FlexEngine\FlexECS">
+      <UniqueIdentifier>{2e5cd5b6-0dbd-499e-b72e-fa402aee38a3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\pch.cpp">
@@ -103,11 +106,11 @@
     <ClCompile Include="src\FlexEngine\Component\Transform2D.cpp">
       <Filter>src\FlexEngine\Component</Filter>
     </ClCompile>
-    <ClCompile Include="src\FlexEngine\Core\ecs.cpp">
-      <Filter>src\FlexEngine\Core</Filter>
+    <ClCompile Include="src\FlexEngine\FlexECS\entity.cpp">
+      <Filter>src\FlexEngine\FlexECS</Filter>
     </ClCompile>
-    <ClCompile Include="src\FlexEngine\Core\entity.cpp">
-      <Filter>src\FlexEngine\Core</Filter>
+    <ClCompile Include="src\FlexEngine\FlexECS\scene.cpp">
+      <Filter>src\FlexEngine\FlexECS</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -207,14 +210,19 @@
     <ClInclude Include="src\FlexEngine\Component\Transform2D.h">
       <Filter>src\FlexEngine\Component</Filter>
     </ClInclude>
-    <ClInclude Include="src\FlexEngine\Core\ecs.h">
-      <Filter>src\FlexEngine\Core</Filter>
-    </ClInclude>
     <ClInclude Include="src\FlexEngine\ansi_color.h">
       <Filter>src\FlexEngine</Filter>
     </ClInclude>
-    <ClInclude Include="src\FlexEngine\Core\entity.h">
-      <Filter>src\FlexEngine\Core</Filter>
+    <ClInclude Include="src\FlexEngine\FlexECS\datastructures.h">
+      <Filter>src\FlexEngine\FlexECS</Filter>
     </ClInclude>
+    <ClInclude Include="src\flx_api.h">
+      <Filter>src</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\FlexEngine\FlexECS\entity.inl">
+      <Filter>src\FlexEngine\FlexECS</Filter>
+    </None>
   </ItemGroup>
 </Project>
