ECS reflection completed, major bug fixes
- added demo components for testing
- reworked some of the unit tests
- deprecated the old FLX_REFL_ECS macros
- fixed a bug where __FLX_API was not defined for template specializations in reflection primitives
- changed ComponentID from std::type_index to std::string
- added lookup table to convert string representation to their corresponding TypeDescriptor*
- added reflection for most ecs data structures
- added ArchetypeID to entity_index -> EntityRecord for relinking Archetype pointers
- added specialization for reflecting std::shared_ptr<void>, serializing the data to a hex string
- plenty of minor bug fixes all over the place

--- a/FlexEditor/FlexEditor.vcxproj
+++ b/FlexEditor/FlexEditor.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Components\DemoComponents.cpp" />
     <ClCompile Include="src\Layers\editorui.cpp" />
     <ClCompile Include="src\Layers\splashscreen.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -32,6 +33,7 @@
     <None Include="assets\shaders\texture.vert" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Components\DemoComponents.h" />
     <ClInclude Include="src\Layers.h" />
     <ClInclude Include="src\Layers\editorui.h" />
     <ClInclude Include="src\Layers\splashscreen.h" />
