--- a/FlexEngine/FlexEngine.vcxproj
+++ b/FlexEngine/FlexEngine.vcxproj
@@ -166,6 +166,9 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClCompile Include="..\third_party\src\glad\glad.c" />
     <ClCompile Include="src\FlexEngine\Core\imguiwrapper.cpp" />
     <ClCompile Include="src\FlexEngine\Core\layerstack.cpp" />
+    <ClCompile Include="src\FlexEngine\DataStructures\file.cpp" />
+    <ClCompile Include="src\FlexEngine\DataStructures\filelist.cpp" />
+    <ClCompile Include="src\FlexEngine\DataStructures\path.cpp" />
     <ClCompile Include="src\FlexEngine\datetime.cpp" />
     <ClCompile Include="src\FlexEngine\FlexECS\datastructures.cpp" />
     <ClCompile Include="src\FlexEngine\FlexECS\entity.cpp" />
@@ -204,6 +207,9 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClInclude Include="src\FlexEngine\Core\imguiwrapper.h" />
     <ClInclude Include="src\FlexEngine\Core\layer.h" />
     <ClInclude Include="src\FlexEngine\Core\layerstack.h" />
+    <ClInclude Include="src\FlexEngine\DataStructures\file.h" />
+    <ClInclude Include="src\FlexEngine\DataStructures\filelist.h" />
+    <ClInclude Include="src\FlexEngine\DataStructures\path.h" />
     <ClInclude Include="src\FlexEngine\datetime.h" />
     <ClInclude Include="src\FlexEngine\flexassert.h" />
     <ClInclude Include="src\FlexEngine\FlexECS\datastructures.h" />
