properties panel update

--- a/FlexEditor/imgui.ini
+++ b/FlexEditor/imgui.ini
@@ -173,20 +173,20 @@ Size=319,900
 Collapsed=0
 
 [Window][Down]
-Pos=317,548
-Size=609,172
+Pos=379,548
+Size=547,172
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Viewport]
-Pos=317,29
-Size=609,517
+Pos=379,29
+Size=547,517
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Content Browser]
 Pos=0,29
-Size=315,691
+Size=377,691
 Collapsed=0
 DockId=0x00000001,0
 
@@ -204,14 +204,20 @@ DockId=0x00000005,0
 
 [Window][Entity Testing]
 Pos=0,29
-Size=315,691
+Size=377,691
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000001,2
 
 [Window][Create Entity]
-Pos=596,306
+Pos=597,304
 Size=305,221
 Collapsed=0
+
+[Window][Scene]
+Pos=0,29
+Size=377,691
+Collapsed=0
+DockId=0x00000001,1
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -351,8 +357,8 @@ DockSpace         ID=0x3BC79352 Pos=138,182 Size=1600,879 Split=Y
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,209 Size=1280,691 Split=X
   DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=926,691 Split=X
     DockNode      ID=0x00000006 Parent=0x00000003 SizeRef=968,691 Split=X
-      DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=315,691 Selected=0x53F85867
-      DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=609,691 Split=Y
+      DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=377,691 Selected=0xE192E354
+      DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=547,691 Split=Y
         DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=654,174 CentralNode=1 Selected=0x13926F0B
         DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=654,172 Selected=0x2DAC0363
     DockNode      ID=0x00000008 Parent=0x00000003 SizeRef=310,691 Selected=0xE87781F4
