--- a/FlexEngine/FlexEngine.vcxproj
+++ b/FlexEngine/FlexEngine.vcxproj
@@ -210,6 +210,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClInclude Include="src\FlexEngine\DataStructures\file.h" />
     <ClInclude Include="src\FlexEngine\DataStructures\filelist.h" />
     <ClInclude Include="src\FlexEngine\DataStructures\path.h" />
+    <ClInclude Include="src\FlexEngine\DataStructures\range.h" />
     <ClInclude Include="src\FlexEngine\datetime.h" />
     <ClInclude Include="src\FlexEngine\flexassert.h" />
     <ClInclude Include="src\FlexEngine\FlexECS\datastructures.h" />
