--- a/FlexEngine/FlexEngine.vcxproj
+++ b/FlexEngine/FlexEngine.vcxproj
@@ -164,8 +164,10 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\third_party\src\glad\glad.c" />
+    <ClCompile Include="src\FlexEngine\Core\frameratecontroller.cpp" />
     <ClCompile Include="src\FlexEngine\Core\imguiwrapper.cpp" />
     <ClCompile Include="src\FlexEngine\Core\layerstack.cpp" />
+    <ClCompile Include="src\FlexEngine\Core\windowprops.cpp" />
     <ClCompile Include="src\FlexEngine\FlexECS\datastructures.cpp" />
     <ClCompile Include="src\FlexEngine\FlexECS\entity.cpp" />
     <ClCompile Include="src\FlexEngine\FlexECS\scene.cpp" />
@@ -204,6 +206,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\FlexEngine\Core\components.h" />
+    <ClInclude Include="src\FlexEngine\Core\frameratecontroller.h" />
     <ClInclude Include="src\FlexEngine\Core\imguiwrapper.h" />
     <ClInclude Include="src\FlexEngine\Core\layer.h" />
     <ClInclude Include="src\FlexEngine\Core\layerstack.h" />
